chnages according to screens (#27)
Co-authored-by: gowtham@aforo.ai <gowtham@aforo.ai>